tests/ui_fail/type_alias_overlap.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui_fail/type_alias_overlap.rs:18:2
   |
18 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui_fail/type_alias_overlap.rs`

error[E0119]: conflicting implementations of trait `Kita0<Vec<u8>>`
  --> tests/ui_fail/type_alias_overlap.rs:17:5
   |
16 |     impl<T: Dispatch<Group = Alias>> Kita for T {}
   |     ------------------------------------------- first implementation here
17 |     impl<T: Dispatch<Group = Vec<u8>>> Kita for T {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation
